small padding fix to bottom of clock on mobile

--- a/src/css/BreakKnob.css
+++ b/src/css/BreakKnob.css
@@ -23,7 +23,12 @@
       text-align: center;
       font-size: 1.5em;
     }
-
+    .break-knob {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     #break-value {
       display: inline-block;
       margin-left: .5em;
